Alteração de descrição

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Gerenciador  | Portifolio</title>
 <meta charset="utf-8">
-<meta name="description" content="Place your description here" />
+<meta name="description" content="Conheça mais sobre mim" />
 <meta name="keywords" content="put, your, keyword, here" />
 <meta name="author" content="Templates.com - website templates provider" />
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
