--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				 <div class="inside">
 						<h2>My Clients:</h2>
 						<ul class="list">
-							 <li><a href="#">Sed ut perspiciatis</a></li>
+							 <li><a href="#">Teste 01</a></li>
 							 <li><a href="#">Unde omnis iste</a></li>
 							 <li><a href="#">Natus error sit volup</a></li>
 							 <li><a href="#">Tatem accusantium</a></li>
