--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<article class="col-1">
 							 <h2>Welcome!</h2>
 							 <img src="images/1page-img.jpg" class="img-indent">
-							 <p>Photo Art is a free web template created by TemplateMonster team, optimized for 1024X768 screen resolution. It is also HTML5 &amp; CSS3 valid. This website has several pages: <a href="index.html">Home</a>, <a href="about-us.html">About</a>, <a href="privacy.html">Privacy</a>, <a href="gallery.html">Gallery</a>, <a href="contact-us.html">Contact</a> (contact form – doesn’t work), <a href="sitemap.html">Sitemap</a>.</p>
+							 <p>Foto Art is a free web template created by TemplateMonster team, optimized for 1024X768 screen resolution. It is also HTML5 &amp; CSS3 valid. This website has several pages: <a href="index.html">Home</a>, <a href="about-us.html">About</a>, <a href="privacy.html">Privacy</a>, <a href="gallery.html">Gallery</a>, <a href="contact-us.html">Contact</a> (contact form – doesn’t work), <a href="sitemap.html">Sitemap</a>.</p>
 						</article>
 						<article class="col-2">
 							 <h2>Fresh News:</h2>
