--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							 <li><a href="#">Teste 01</a></li>
 							 <li><a href="#">Unde omnis iste</a></li>
 							 <li><a href="#">Natus error sit volup</a></li>
-							 <li><a href="#">Tatem accusantium</a></li>
+							 <li><a href="#">Teste 02</a></li>
 						</ul>
 						<figure><img src="images/extra-img.png"></figure>
 				 </div>
